<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="32dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="#151515"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_gravity="center"
        android:gravity="center">
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup">
            <RadioButton
                android:text="@string/monedaDop"
                android:id="@+id/dopGet"
                style="@style/button"
                android:checked="true"/>
            <RadioButton
                android:text="@string/monedaUsd"
                style="@style/button"
                android:id="@+id/usdGet"/>
            <RadioButton
                android:text="@string/monedaEur"
                style="@style/button"
                android:id="@+id/eurGet"/>
        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center">
        <TextView
            android:text="@string/displayMonto"
            style="@style/text"/>
        <EditText
            android:inputType="phone"
            android:maxLength="6"
            android:id="@+id/monto"
            style="@style/input"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:text="@string/displayTasa1"
                style="@style/text"
                android:id="@+id/tasaTexto1"/>
            <EditText
                android:id="@+id/tasa1"
                style="@style/input"
                android:maxLength="5"
                android:inputType="numberDecimal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:text="@string/displayTasa2"
                style="@style/text"
                android:id="@+id/tasaTexto2"/>
            <EditText
                android:id="@+id/tasa2"
                style="@style/input"
                android:maxLength="5"
                android:inputType="numberDecimal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:text="@string/display1"
                android:id="@+id/visablePrimary"
                style="@style/text"
                android:gravity="center"/>
            <TextView
                android:text="@string/display2"
                android:id="@+id/visableSecond"
                style="@style/text"
                android:gravity="center"/>

        </LinearLayout>
        <Button
            android:id="@+id/calcular"
            android:text="@string/displayButton"
            style="@style/button"
            android:layout_marginTop="30dp"/>
    </LinearLayout>

</LinearLayout>